# LightweightPomodoroTimer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/ui/: button.slint  main.slint
