[package]
name = "PomodoroTimer"
version = "0.2.0"
edition = "2024"

[dependencies]
slint = { version="1.13.0", features = ["renderer-femtovg-wgpu"]}

[build-dependencies]
slint-build = "1.13.0"

[profile.release]
strip = true      # Deletes debug symbols from the binary
opt-level = "z"   # Optimize for size
lto = true        # Enables Link-Time Optimization (optimization at linking stage)
codegen-units = 1 # Less amount of compilation units for more optimization
panic = "abort" 
